<resources>
    <string name="app_name">MovieTunes</string>
    <string name="message_success_default">Success</string>
    <string name="message_add_favorite_movie">The movie was added your favorites</string>
    <string name="message_remove_favorite_movie">The movie was removed</string>

    <!--OnBoarding (Splash) Screen-->
    <string name="text_welcome_to_movie_tunes">Welcome to \nMovieTunes</string>
    <string name="text_button_start">Start</string>
    <!--Home Screen-->
    <string name="text_what_do_you_want_to_watch">Top rated</string>
    <string name="text_error_occurred_home">An error ocurred\nClick to try again</string>
    <!--Details About Movie Screen-->
    <string name="text_detail_movie">Detail</string>
    <string name="text_sinopse_movie">Resume</string>
    <string name="movie_title" translatable="false">%s</string>
    <string name="error_loading_movie_details">😔 Try again! Sorry…</string>
    <string name="text_button_login" translatable="false">Login</string>
    <string name="text_hint_email">\@organization.com</string>
    <string name="text_hint_password">Password</string>
    <string name="welcome_mr_mra_login">Welcome Mr/Mra…</string>
    <string name="create_account">Create your account</string>
    <string name="text_hint_name">e. John Doe</string>
    <string name="text_button_register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="text_not_found_favs">Not favorites films saved yet</string>
    <string name="add_film_you_favorite">Add this movie in your favorites</string>
    <string name="message_error_default">Error in delete</string>
    <string name="message_favorite_not_sign">Add your favorites needs sign in</string>
    <string name="title_toolbar_fav_movies">Your favorite movies</string>
    <string name="message_error_field">The Fields can\'t be null</string>
    <string name="text_search_item">Search…</string>
    <string name="message_dismiss_snackbar">Dismiss</string>
    <string name="text_runtime_movie_detail">%d min</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_button_turn_to_top">Button turn to top</string>
    <string name="content_description_button_see_your_favorites">Button see your favorites</string>
</resources>