<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppScreenTheme"
        android:orientation="vertical"
        tools:context=".ui.login.signin.view.LoginFragment">

        <com.google.android.material.appbar.MaterialToolbar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar_login"
            android:background="@color/color_primary_brand"
            app:navigationIcon="@drawable/ic_close_x"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_mr_mra_login"
            android:textAppearance="@style/WhiteTextAppearanceHead"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_fields_login"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_fields_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:padding="@dimen/space_20dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:hint="@string/text_hint_password"
                app:passwordToggleEnabled="true"
                android:padding="@dimen/space_20dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:text="@string/text_button_login"
                android:background="@drawable/ripple_btn_bg_start"
                style="@style/WhiteTextAppearanceButton"
                android:layout_margin="@dimen/space_20dp"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/create_your_account"
            android:textAppearance="@style/WhiteTextAppearanceSubhead"
            app:layout_constraintTop_toBottomOf="@id/ll_fields_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>